# django-fixedassets-ve

./: LICENSE  README.md  pyproject.toml
fixedassets/: apps.py  conf.py  enums.py
fixedassets/api/: serializers.py  urls.py  views.py
fixedassets/mgmt/commands/: fa_bootstrap_demo.py
fixedassets/models/: asset.py  config.py  movement.py  schedule.py
fixedassets/posting/: adapters.py
fixedassets/tests/: test_depr_posting.py
fixedassets/utils/: depreciation.py  money.py
